--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
     - docker build -t rasgdev/docker-react -f Dockerfile.dev .
 
 script:
-    - docker run rasgdev/docker-react npm run test -- --coverage
+    - docker run -e CI =true rasgdev/docker-react npm run test
