--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 sudo: required
+language: generic
 services:
     - docker
 
@@ -6,4 +7,4 @@ before_install:
     - docker build -t rasgdev/docker-react -f Dockerfile.dev .
 
 script:
-    - docker run -e CI =true rasgdev/docker-react npm run test
+    - docker run rasgdev/docker-react npm run test -- --coverage
